--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     </repositories>
 
     <properties>
-        <!--<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>-->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.class>com.ingenuity.MailSender</main.class>
     </properties>
 
